# google-drive-agentic-rag

./: .env.example  .gitignore  README.md  pyproject.toml
src/googledriveagenticiarag/: agent.py  api.py  connect_drive.py  embedder.py  get_answers.py  handle_client_queries.py  llm_generation.py  llm_tools.py  main.py  rag_pipeline.py  vector_store.py
src/googledriveagenticiarag/utils/: processing_data.py
