[project]
name = "googledriveagenticiarag"
version = "0.1.0"
description = ""
authors = [
    {name = "donatien konan",email = "donatien.konan.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markitdown (>=0.1.3,<0.2.0)",
    "langchain-google-community[drive] (>=2.0.10,<3.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "langchain-mistralai (>=0.2.12,<0.3.0)",
    "langchain-anthropic (==0.3.20)",
    "langchain-google-vertexai (>=2.1.2,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "gradio (>=5.49.0,<6.0.0)",
    "chromadb (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "pydantic (==2.12.3)",
]

[tool.poetry]
packages = [{include = "googledriveagenticiarag", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipython = "^9.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
